--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
     <string name="app_name">AndroidTrainning</string>
     <string name="action_settings">Settings</string>
+    <string name="title_login">Login</string>
+    <string name="title_email">Email</string>
+    <string name="title_password">Password</string>
+    <string name="login_failed">* Username or password is incorrect</string>
+    <string name="login_create_account">Create new account</string>
+    <string name="title_ok">OK</string>
+    <string name="title_retype_password">Retype password</string>
+    <string name="title_full_name">Full name</string>
+    <string name="title_avatar">Avatar</string>
+    <string name="learned_format">Learned %d words</string>
 </resources>
