--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,18 @@
     <string name="title_full_name">Full name</string>
     <string name="title_avatar">Avatar</string>
     <string name="learned_format">Learned %d words</string>
+    <string name="title_old_password">Old password</string>
+    <string name="title_new_password">New password</string>
+
+    <string-array name="arr_categories">
+        <item>All</item>
+        <item>Basic</item>
+        <item>Advance</item>
+        <item>Expert</item>
+    </string-array>
+    <string-array name="arr_learn">
+        <item>All</item>
+        <item>Learned</item>
+        <item>Not learn</item>
+    </string-array>
 </resources>
